# IKEA-Assembly-Planning

./: .gitignore  UPDATES.md  pyproject.toml
VLM_assembly_plan_gen/: demo.ipynb  manual2skill_demo.py  recipe.yaml
VLM_assembly_plan_gen/data/renders/Bench/applaro_3/step0_sub00_11/: manifest.json  poses.json
VLM_assembly_plan_gen/data/renders/Bench/applaro_3/step0_sub01_12/: manifest.json  poses.json
VLM_assembly_plan_gen/data/renders/Bench/applaro_3/step0_sub02_7/: manifest.json  poses.json
VLM_assembly_plan_gen/data/renders/Bench/applaro_3/step0_sub03_2/: manifest.json  poses.json
VLM_assembly_plan_gen/data/renders/Bench/applaro_3/step0_sub04_3/: manifest.json  poses.json
VLM_assembly_plan_gen/data/renders/Bench/applaro_3/step1_sub00_11.12.2.3.7/: manifest.json  poses.json
VLM_assembly_plan_gen/data/renders/Bench/applaro_3/step1_sub01_6/: manifest.json  poses.json
VLM_assembly_plan_gen/data/renders/Bench/applaro_3/step1_sub02_10/: manifest.json  poses.json
VLM_assembly_plan_gen/data/renders/Bench/applaro_3/step1_sub03_8/: manifest.json  poses.json
VLM_assembly_plan_gen/data/renders/Bench/applaro_3/step1_sub04_4/: manifest.json  poses.json
VLM_assembly_plan_gen/data/renders/Bench/applaro_3/step1_sub05_5/: manifest.json  poses.json
VLM_assembly_plan_gen/data/renders/Bench/applaro_3/step1_sub06_9/: manifest.json  poses.json
VLM_assembly_plan_gen/data/renders/Bench/applaro_3/step2_sub00_1/: manifest.json  poses.json
VLM_assembly_plan_gen/data/renders/Bench/applaro_3/step2_sub01_10.11.12.2.3.4.5.6.7.8.9/: manifest.json  poses.json
VLM_assembly_plan_gen/inference/: app.py  app_viz.py  config.py  convert.py  detect_steps_bbox.py  run.py  run_detect.py  stage1_associate.py  stage2_planning.py  stage3_5_pddl_validate.py  stage3_action_extraction.py  stage4_formalize.py  stage5_bt_compile.py
VLM_assembly_plan_gen/llm/: model.py  utils.py
VLM_assembly_plan_gen/notebooks/: sam2_finetune.ipynb
VLM_assembly_plan_gen/part_segmentation/: __init__.py  config.py  data_preparation.py  dataset.py  integrate.py  predict.py
VLM_assembly_plan_gen/prompts/: action_extraction.txt  planning_no_seg.txt  planning_no_seg_no_num.txt
VLM_assembly_plan_gen/reward_bt_synth/: REPORT.md  __init__.py  action_model.py  analysis.py  ast_extractor.py  axioms.py  benchmark.py  benchmark_vlm.py  bt_expansion.py  cli.py  comparison.py  coverage.py  exceptions.py  ground_truth.py  pytrees_build.py  reward_specs.py  stage2_v2_plan.py  stochastic_verifier.py  viz.py  vlm_client.py  vocabulary.py
VLM_assembly_plan_gen/reward_bt_synth/prompts_v2/: assign_connections_to_steps.txt  enumerate_connections.txt  repair_connection_assignment.txt
VLM_assembly_plan_gen/utils/: utils.py
