[project]
name = "ikea-assembly-planning"
version = "0.1.0"
description = "Manual2Skill: Robot furniture assembly guided by IKEA manuals"
requires-python = ">=3.13"
dependencies = [
    # LLM inference pipeline
    "openai>=1.0.0",
    "langchain",
    "langchain-core",
    "langchain-openai",
    "langchain-anthropic",
    "langchain-google-vertexai",
    "langchain-ollama",
    "pydantic",
    "python-dotenv",
    "google-auth", # google.oauth2.credentials for ChatVertexAI
    # Utilities used across VLM scripts
    "tqdm",
    "numpy",
    "scikit-learn",
    "matplotlib",
    "opencv-python", # scene_gen/annotator.py
    "Pillow", # PIL image handling for supervision annotators
    "supervision>=0.26.0", # Gemini 2.5 bbox annotation (sv.VLM.GOOGLE_GEMINI_2_5)
    # Behavior tree generation and visualization (stage4_formalize.py)
    "py-trees>=2.2.3",
    "pydot>=2.0.0",
    # Visualization app
    "streamlit>=1.44.0",
    "pyyaml",
    "networkx>=3.6.1",
    "plotly>=5.0.0", # interactive charts for app.py
    "pycocotools>=2.0.11",
    # Formal BT compiler (stage5_bt_compile.py)
    "pyperplan>=2.1", # pure-Python PDDL planner for plan grounding
    "behaverify>=1.0.0", # LTL verification of BTs via nuXmv (nuXmv binary req'd for full check)
]

[project.optional-dependencies]
# Install with: uv sync --extra pose-estimation
# Note: pytorch3d has no PyPI wheels; install separately from source.
# Note: bpy (Blender Python API) is bundled with Blender — do not pip-install it.
pose-estimation = [
    "torch",
    "torchvision",
    "scipy",
    "pillow",
    "h5py",
    "einops",
    "wandb",
]

[tool.uv]
package = false
python-preference = "only-system"
